chore: formatting, linting & intellij code analyze & infosupport feedback